cmake_minimum_required(VERSION 3.16)

project(eawebkit)

add_subdirectory(EAWebKitSupportPackages/cairo/local-1.12.14)
add_subdirectory(EAWebKitSupportPackages/libpngEAWebKit/local-1.01.00-01)
add_subdirectory(EAWebKitSupportPackages/pixman/local-0.28.2)
add_subdirectory(EAWebKitSupportPackages/zlibEAWebKit/local-1.2.5-7-01)
