add_library(cairo 
  "include/cairo-version.h"
  "include/cairo/cairo.h"
  "include/cairo/cairo-deprecated.h"
  "include/cairo/cairo-features.h"
  "include/cairo/cairo-malloc.h"
  "source/cairo.c"
  "source/cairo-analysis-surface.c"
  "source/cairo-analysis-surface-private.h"
  "source/cairo-arc.c"
  "source/cairo-arc-private.h"
  "source/cairo-array.c"
  "source/cairo-array-private.h"
  "source/cairo-atomic.c"
  "source/cairo-atomic-private.h"
  "source/cairo-backend-private.h"
  "source/cairo-base85-stream.c"
  "source/cairo-bentley-ottmann.c"
  "source/cairo-bentley-ottmann-rectangular.c"
  "source/cairo-bentley-ottmann-rectilinear.c"
  "source/cairo-boxes.c"
  "source/cairo-boxes-intersect.c"
  "source/cairo-boxes-private.h"
  "source/cairo-box-inline.h"
  "source/cairo-cache.c"
  "source/cairo-cache-private.h"
  "source/cairo-cff-subset.c"
  "source/cairo-clip.c"
  "source/cairo-clip-boxes.c"
  "source/cairo-clip-inline.h"
  "source/cairo-clip-polygon.c"
  "source/cairo-clip-private.h"
  "source/cairo-clip-region.c"
  "source/cairo-clip-surface.c"
  "source/cairo-clip-tor-scan-converter.c"
  "source/cairo-color.c"
  "source/cairo-combsort-inline.h"
  "source/cairo-compiler-private.h"
  "source/cairo-composite-rectangles.c"
  "source/cairo-composite-rectangles-private.h"
  "source/cairo-compositor.c"
  "source/cairo-compositor-private.h"
  "source/cairo-contour.c"
  "source/cairo-contour-inline.h"
  "source/cairo-contour-private.h"
  "source/cairo-damage.c"
  "source/cairo-damage-private.h"
  "source/cairo-debug.c"
  "source/cairo-default-context.c"
  "source/cairo-default-context-private.h"
  "source/cairo-device.c"
  "source/cairo-device-private.h"
  "source/cairo-error.c"
  "source/cairo-error-private.h"
  "source/cairo-fallback-compositor.c"
  "source/cairo-fixed.c"
  "source/cairo-fixed-private.h"
  "source/cairo-fixed-type-private.h"
  "source/cairo-font-face.c"
  "source/cairo-font-face-twin.c"
  "source/cairo-font-face-twin-data.c"
  "source/cairo-font-options.c"
  "source/cairo-freed-pool-private.h"
  "source/cairo-freelist.c"
  "source/cairo-freelist-private.h"
  "source/cairo-freelist-type-private.h"
  "source/cairo-gstate.c"
  "source/cairo-gstate-private.h"
  "source/cairo-hash.c"
  "source/cairo-hash-private.h"
  "source/cairo-hull.c"
  "source/cairo-image-compositor.c"
  "source/cairo-image-info.c"
  "source/cairo-image-info-private.h"
  "source/cairo-image-source.c"
  "source/cairo-image-surface.c"
  "source/cairo-image-surface-inline.h"
  "source/cairo-image-surface-private.h"
  "source/cairoint.h"
  "source/cairo-list-inline.h"
  "source/cairo-list-private.h"
  "source/cairo-lzw.c"
  "source/cairo-malloc-private.h"
  "source/cairo-mask-compositor.c"
  "source/cairo-matrix.c"
  "source/cairo-mesh-pattern-rasterizer.c"
  "source/cairo-misc.c"
  "source/cairo-mono-scan-converter.c"
  "source/cairo-mutex.c"
  "source/cairo-mutex-impl-private.h"
  "source/cairo-mutex-list-private.h"
  "source/cairo-mutex-private.h"
  "source/cairo-mutex-type-private.h"
  "source/cairo-no-compositor.c"
  "source/cairo-observer.c"
  "source/cairo-output-stream.c"
  "source/cairo-output-stream-private.h"
  "source/cairo-paginated-private.h"
  "source/cairo-paginated-surface.c"
  "source/cairo-paginated-surface-private.h"
  "source/cairo-path.c"
  "source/cairo-path-bounds.c"
  "source/cairo-path-fill.c"
  "source/cairo-path-fixed.c"
  "source/cairo-path-fixed-private.h"
  "source/cairo-path-in-fill.c"
  "source/cairo-path-private.h"
  "source/cairo-path-stroke.c"
  "source/cairo-path-stroke-boxes.c"
  "source/cairo-path-stroke-polygon.c"
  "source/cairo-path-stroke-traps.c"
  "source/cairo-path-stroke-tristrip.c"
  "source/cairo-pattern.c"
  "source/cairo-pattern-inline.h"
  "source/cairo-pattern-private.h"
  "source/cairo-pen.c"
  "source/cairo-png.c"
  "source/cairo-polygon.c"
  "source/cairo-polygon-intersect.c"
  "source/cairo-polygon-reduce.c"
  "source/cairo-private.h"
  "source/cairo-raster-source-pattern.c"
  "source/cairo-recording-surface.c"
  "source/cairo-recording-surface-inline.h"
  "source/cairo-recording-surface-private.h"
  "source/cairo-rectangle.c"
  "source/cairo-rectangular-scan-converter.c"
  "source/cairo-reference-count-private.h"
  "source/cairo-region.c"
  "source/cairo-region-private.h"
  "source/cairo-scaled-font.c"
  "source/cairo-scaled-font-private.h"
  "source/cairo-scaled-font-subsets.c"
  "source/cairo-scaled-font-subsets-private.h"
  "source/cairo-shape-mask-compositor.c"
  "source/cairo-slope.c"
  "source/cairo-slope-private.h"
  "source/cairo-spans.c"
  "source/cairo-spans-compositor.c"
  "source/cairo-spans-compositor-private.h"
  "source/cairo-spans-private.h"
  "source/cairo-spline.c"
  "source/cairo-stroke-dash.c"
  "source/cairo-stroke-dash-private.h"
  "source/cairo-stroke-style.c"
  "source/cairo-surface.c"
  "source/cairo-surface-backend-private.h"
  "source/cairo-surface-clipper.c"
  "source/cairo-surface-clipper-private.h"
  "source/cairo-surface-fallback.c"
  "source/cairo-surface-fallback-private.h"
  "source/cairo-surface-inline.h"
  "source/cairo-surface-observer-private.h"
  "source/cairo-surface-offset.c"
  "source/cairo-surface-offset-private.h"
  "source/cairo-surface-private.h"
  "source/cairo-surface-snapshot.c"
  "source/cairo-surface-snapshot-inline.h"
  "source/cairo-surface-snapshot-private.h"
  "source/cairo-surface-subsurface.c"
  "source/cairo-surface-subsurface-inline.h"
  "source/cairo-surface-subsurface-private.h"
  "source/cairo-surface-wrapper.c"
  "source/cairo-surface-wrapper-private.h"
  "source/cairo-tee-surface-private.h"
  "source/cairo-time-private.h"
  "source/cairo-tor22-scan-converter.c"
  "source/cairo-tor-scan-converter.c"
  "source/cairo-toy-font-face.c"
  "source/cairo-traps.c"
  "source/cairo-traps-compositor.c"
  "source/cairo-traps-private.h"
  "source/cairo-tristrip.c"
  "source/cairo-tristrip-private.h"
  "source/cairo-truetype-subset.c"
  "source/cairo-truetype-subset-private.h"
  "source/cairo-type1-fallback.c"
  "source/cairo-type1-glyph-names.c"
  "source/cairo-type1-private.h"
  "source/cairo-type1-subset.c"
  "source/cairo-types-private.h"
  "source/cairo-unicode.c"
  "source/cairo-user-font.c"
  "source/cairo-user-font-private.h"
  "source/cairo-version.c"
  "source/cairo-version.h"
  "source/cairo-wideint.c"
  "source/cairo-wideint-private.h"
  "source/cairo-wideint-type-private.h"
  "source/cairo-win32.h"
  "source/cairo-win32-private.h"
)
target_compile_definitions(cairo PRIVATE
  "CAIRO_DISABLE_TMPFILE"
  "CAIRO_NO_MUTEX=1"
  "cairo_public="
  "EA_SLN_BUILD=1"
  "NDEBUG"
  "HAVE_STDINT_H"
  "HAVE_UINT64_T"
)
target_include_directories(cairo PRIVATE
  "include"
  "include/cairo"
)
target_link_libraries(cairo PRIVATE pixman)