add_library(pixman 
  "source/pixman.c"
  "source/pixman-access.c"
  "source/pixman-access-accessors.c"
  "source/pixman-arm.c"
  "source/pixman-bits-image.c"
  "source/pixman-combine32.c"
  "source/pixman-combine-float.c"
  "source/pixman-conical-gradient.c"
  "source/pixman-edge.c"
  "source/pixman-edge-accessors.c"
  "source/pixman-fast-path.c"
  "source/pixman-general.c"
  "source/pixman-glyph.c"
  "source/pixman-gradient-walker.c"
  "source/pixman-image.c"
  "source/pixman-implementation.c"
  "source/pixman-linear-gradient.c"
  "source/pixman-matrix.c"
  "source/pixman-mips.c"
  "source/pixman-noop.c"
  "source/pixman-ppc.c"
  "source/pixman-radial-gradient.c"
  "source/pixman-region16.c"
  "source/pixman-region32.c"
  "source/pixman-solid-fill.c"
  "source/pixman-timer.c"
  "source/pixman-trap.c"
  "source/pixman-utils.c"
  "source/pixman-x86.c"
)
target_compile_definitions(pixman PRIVATE
  "_HAS_EXCEPTIONS=0"
  "EA_SLN_BUILD=1"
  "NDEBUG"
  "PACKAGE_BUGREPORT="
  "PACKAGE_VERSION="
  "PACKAGE=pixman"
  "PIXMAN_NO_TLS"
  "USE_SSE2"
)
target_include_directories(pixman PUBLIC
  "include"
)